k8s_hml/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gestao-garantias-frontend-hml
  namespace: gestao-garantias-hml
spec:
  selector:
    app: gestao-garantias-frontend-hml
  ports:
    - port: 80
      targetPort: 80
